ticker/client/dashboard.css
/* Generic elements */
body {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 200;
    margin: 50px 0;
    padding: 0;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}

a, a:visited {
    color: #08c;
    text-decoration: none;
}

a:hover {
    opacity: 0.7;
}

input:focus::-webkit-input-placeholder {
    color: transparent;
}

table { 
  border-collapse:collapse 
}

input[type="button"] {
  background-color: #ddd;
  padding: 5px 10px;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  border: none;
  font-size: 16px !important; 
}

input[type="button"]:hover {
  background-color: #bbb;
}

input[type="button"]:active {
  background-color: #444;
  color: white;
}

#outer {
    width: 800px;
    margin: 0 auto;    
}

.user {
    cursor: pointer;
    padding: 5px;
}

.user .name {
    display: inline-block;
    width: 300px;
    font-size: 1.75em;
}

.user .value {
    display: inline-block;
    width: 100px;
    text-align: right;
    font-size: 2em;
    font-weight: bold;
    color: #777;
}

.dashboard {
    font-size: 1.75em;
}

.dashboard td {
    min-width: 100px;
    padding: 5px;
}

.dashboard.clickable {
    cursor: pointer;
}

.dashboard.clickable:hover {
    background-color: #efefef;
}

.dashboard .symbol {
    font-weight: 400;
}

.dashboard .numerical {
    text-align: right;
}

.dashboard .up {
    color: green;
}

.dashboard .delta {
    font-weight: 400;
}

.dashboard .down {
    color: red;
}

.dashboard .secondary {
    font-size: 0.8em;
}

.dashboard .tertiary {
    font-size: 0.5em;
}

.stock_list {
    margin-bottom: 15px;
}

#new_stock input {
    font-size: 1.2em;
}

#new_stock input.symbol::-webkit-input-placeholder {
    color: #A9A9A9;
}

#new_stock input.shares, input.cost_basis {
    width: 100px;
}

